--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hexa-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -33,6 +33,17 @@
     "postcss": "^8",
     "storybook": "^8.3.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "typescript": "^5.6.3"
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "src/app/components/index.ts",
+  "repository": {
+    "type": "git",
+    "url": "hexa-ui"
+  },
+  "keywords": [
+    "hexal-ui"
+  ],
+  "author": "Rohan Gotwal",
+  "license": "ISC"
 }
