--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexal-ui",
- "version": "0.1.2",
+ "version": "0.1.3",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -36,7 +36,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
   },
-  "description": "HexaUI is a modern, flexible, and highly customizable UI component library for React, designed to help developers quickly build responsive and scalable web applications. Built with a focus on modularity, HexaUI provides a wide range of pre-designed, reusable components that are easy to integrate and customize to match your project’s design system.",
+  "description": "HexalUI is a modern, flexible, and highly customizable UI component library for React, designed to help developers quickly build responsive and scalable web applications. Built with a focus on modularity, HexalUI provides a wide range of pre-designed, reusable components that are easy to integrate and customize to match your project’s design system.",
   "main": "components/ModuleComponents/index.ts",
   "repository": {
     "type": "git",
